# botXIEEE

./: .gitignore  LICENSE  README.md  install-ros2-humble.sh  setup-ros2-distrobox.sh
docs/: 01-robot-arms-and-dof.md  02-hardware-and-electronics.md  03-firmware-esp32.md  04-urdf-explained.md  05-ros2-workspace.md  06-moveit2-and-rviz.md  07-gamepad-teleop.md  08-class-demo-script.md  09-troubleshooting.md  10-terminal-controller.md  COMMANDS.md  OVERVIEW.md  README.md  TROUBLESHOOTING.md  USAGE.md
firmware/: README.md  platformio.ini
firmware/include/: config.h
firmware/src/: main.cpp
ros2_ws/src/botx_description/: CMakeLists.txt  package.xml
ros2_ws/src/botx_description/launch/: display.launch.py
ros2_ws/src/botx_description/rviz/: display.rviz
ros2_ws/src/botx_description/urdf/: botx_arm.urdf.xacro
ros2_ws/src/botx_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/botx_driver/botx_driver/: serial_link.py  trajectory_server.py
ros2_ws/src/botx_driver/config/: servo_calibration.yaml
ros2_ws/src/botx_driver/launch/: driver.launch.py
ros2_ws/src/botx_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/botx_moveit_config/config/: botx.srdf  botx.urdf.xacro  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
ros2_ws/src/botx_moveit_config/launch/: demo.launch.py
ros2_ws/src/botx_moveit_config/rviz/: moveit.rviz
ros2_ws/src/botx_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src/botx_teleop/botx_teleop/: joy_teleop.py
ros2_ws/src/botx_teleop/config/: fantech.yaml
ros2_ws/src/botx_teleop/launch/: teleop.launch.py
ros2_ws/src/botx_tui/: package.xml  setup.cfg  setup.py
ros2_ws/src/botx_tui/botx_tui/: arm_tui.py
